--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,15 +5,15 @@
       layout:decorate="~{layouts/base}" lang="en">
 
 <head>
-    <title>Quiz Backend</title>
+    <title>Ryan MCWeeny : Ryanrob327</title>
 </head>
 
 <body>
 <th:block layout:fragment="body" th:remove="tag">
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1><strong>Maybe put an actual title hereeeeee</strong></h1>
-        <p>Maybe put your image here somehow probably would be nice</p>
+        <h1><strong>An actual title</strong></h1>
+        <p>An actual image</p>
     </div>
     <!-- End of body content specific to page -->
 </th:block>
